tracking endpoints and walmart api implemented (#15)
* modified travis file to build the two services separately and splt dockerfile to one for deploy and one for packaging

* modified travis to build all branches here

* removed the branches bit

* making a change to make travis build the pr

* fixed yaml syntax issue

* fixed yaml syntax issue

* modified pom.xml to fix issue

* named the pom file appropriately and removed extra main class

* named the pom file and dockerfile appropriately and removed extra main class

* removed stage for frontend

* started implementing the tracking endpoints

* implemented the calls to Walmart api

* fixed typos and updated readme with instructions

* updated swagger so that the login token is always passed as an input

* implemented the tracking endpoints

* renamed newProductRequest to be more generic, required the url be passed everytime to track/untrack product

* updated the db url in the user service and fixed a request body

* trying to make the env variables pass into docker

* made changes as per the comments and also tried to make the app read the env variables

* fix to make travis pass

* added stored procedures for products

* added getProduct and getWishlist

* updating

* called service to validate, updated the implementation based on new db

* fixed typo

* removed db.init call as it will be automatically called
