# backend/ProductService/src/main/java/io/swagger/api/TrackingApi.java
@@ -5,23 +5,17 @@
  */
 package io.swagger.api;
 
+import io.swagger.model.ProductRequest;
 import io.swagger.model.LoginToken;
-import io.swagger.model.NewProductRequest;
 import io.swagger.model.ProductItem;
 import io.swagger.annotations.*;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
 
 import javax.validation.Valid;
-import javax.validation.constraints.*;
 import java.util.List;
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-11-01T17:36:03.863Z")
 
@@ -37,7 +31,7 @@ public interface TrackingApi {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.PUT)
-    ResponseEntity<ProductItem> addTrackedProduct(@ApiParam(value = "" ,required=true )  @Valid @RequestBody NewProductRequest body);
+    ResponseEntity<ProductItem> addTrackedProduct(@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProductRequest body);
 
 
     @ApiOperation(value = "Delete a product from the user's wishlist", nickname = "deleteTrackedProduct", notes = "", response = ProductItem.class, tags={ "Tracking", })
@@ -45,11 +39,11 @@ public interface TrackingApi {
         @ApiResponse(code = 200, message = "Successful", response = ProductItem.class),
         @ApiResponse(code = 401, message = "Invalid/expired login token"),
         @ApiResponse(code = 405, message = "Product could not be tracked") })
-    @RequestMapping(value = "/tracking/{productId}",
-        produces = { "application/json" }, 
+    @RequestMapping(value = "/tracking/{productUrl}",
+        produces = { "application/json" },
         consumes = { "application/json" },
         method = RequestMethod.DELETE)
-    ResponseEntity<ProductItem> deleteTrackedProduct(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId);
+    ResponseEntity<ProductItem> deleteTrackedProduct(@ApiParam(value = "",required=true) @PathVariable("productUrl") String productUrl, @Valid @RequestBody ProductRequest body);
 
 
     @ApiOperation(value = "Information about an item being tracked by the user defined by the login token", nickname = "getTrackedProductInfo", notes = "", response = ProductItem.class, tags={ "Tracking", })
@@ -57,11 +51,11 @@ public interface TrackingApi {
         @ApiResponse(code = 200, message = "Successful", response = ProductItem.class),
         @ApiResponse(code = 401, message = "Invalid/expired login token"),
         @ApiResponse(code = 405, message = "Product does not exist") })
-    @RequestMapping(value = "/tracking/{productId}/info",
+    @RequestMapping(value = "/tracking/{productUrl}/info",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    ResponseEntity<ProductItem> getTrackedProductInfo(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId,@ApiParam(value = "" ,required=true )  @Valid @RequestBody LoginToken body);
+    ResponseEntity<ProductItem> getTrackedProductInfo(@ApiParam(value = "",required=true) @PathVariable("productUrl") String  productUrl,@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProductRequest body);
 
 
     @ApiOperation(value = "Get all product information for a user defined by their token", nickname = "getTrackedProducts", notes = "", response = ProductItem.class, responseContainer = "List", tags={ "Tracking", })
@@ -89,8 +83,8 @@ public interface TrackingApi {
         @ApiResponse(code = 200, message = "Successful", response = ProductItem.class),
         @ApiResponse(code = 401, message = "Invalid/expired login token"),
         @ApiResponse(code = 405, message = "Could not update product item") })
-    @RequestMapping(value = "/tracking/{productId}",
+    @RequestMapping(value = "/tracking/{productUrl}",
         method = RequestMethod.POST)
-    ResponseEntity<ProductItem> updateProductItem(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId,@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProductItem body);
+    ResponseEntity<ProductItem> updateProductItem(@ApiParam(value = "",required=true) @PathVariable("productUrl") String url, @PathVariable("price") Double price, @ApiParam(value = "" ,required=true )  @Valid @RequestBody LoginToken loginToken);
 
 }
